--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -52,6 +52,7 @@
     <ClCompile Include="App\Utilities\src\SimpleSound.cpp" />
     <ClCompile Include="App\Utilities\src\main.cpp" />
     <ClCompile Include="App\Managers\src\SoundManager.cpp" />
+    <ClCompile Include="App\Utilities\src\QuadtreeNode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -110,6 +111,7 @@
     <ClInclude Include="App\Utilities\include\DirectSound.h" />
     <ClInclude Include="App\Utilities\include\app.h" />
     <ClInclude Include="App\Managers\include\SoundManager.h" />
+    <ClInclude Include="App\Utilities\include\QuadtreeNode.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="NextAPI">
