--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -46,7 +46,7 @@
     <ClCompile Include="App\Systems\src\TitleHandler.cpp" />
     <ClCompile Include="App\Managers\src\SpriteManager.cpp" />
     <ClCompile Include="App\Managers\src\GameManager.cpp" />
-    <ClCompile Include="App\Utilities\src\Color.cpp" />
+    <ClCompile Include="App\Components\src\Color.cpp" />
     <ClCompile Include="App\Utilities\src\app.cpp" />
     <ClCompile Include="App\Utilities\src\DirectSound.cpp" />
     <ClCompile Include="App\Utilities\src\SimpleSound.cpp" />
@@ -105,7 +105,7 @@
     <ClInclude Include="App\Systems\include\TitleHandler.h" />
     <ClInclude Include="App\Managers\include\SpriteManager.h" />
     <ClInclude Include="App\Managers\include\GameManager.h" />
-    <ClInclude Include="App\Utilities\include\Color.h" />
+    <ClInclude Include="App\Components\include\Color.h" />
     <ClInclude Include="App\Utilities\include\SimpleSound.h" />
     <ClInclude Include="App\Utilities\include\mydirectsound.h" />
     <ClInclude Include="App\Utilities\include\DirectSound.h" />
@@ -140,6 +140,10 @@
     <Image Include="Data\SpriteSheets\Buttons.png" />
     <Image Include="Data\Sprites\PlayButton.png" />
     <Image Include="Data\Sprites\BackButton.png" />
+    <Image Include="Data\Sprites\QuitButton.png" />
+    <Image Include="Data\Sprites\Starfield.png" />
+    <Image Include="Data\Sprites\Crosshair.png" />
+    <Image Include="Data\Sprites\AmmoBox.png" />
   </ItemGroup>
   <ItemGroup>
     <Media Include="Data\Sounds\Test.wav" />
