--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -292,8 +292,8 @@
     <Image Include="Data\SpriteSheets\PlayButton.png" />
     <Image Include="Data\SpriteSheets\Player.bmp" />
     <Image Include="Data\SpriteSheets\Player.png" />
-    <Image Include="Data\SpriteSheets\AmmoBox.png" />
-    <Image Include="Data\Sprites\AmmoBox.png" />
+    <Image Include="Data\SpriteSheets\AmmoPickup.png" />
+    <Image Include="Data\Sprites\AmmoPickup.png" />
     <Image Include="Data\Sprites\AmmoEmpty.png" />
     <Image Include="Data\Sprites\AmmoFilled.png" />
     <Image Include="Data\Sprites\BackButton.png" />
