--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -54,6 +54,7 @@
     <ClCompile Include="App\Managers\src\SoundManager.cpp" />
     <ClCompile Include="App\Utilities\src\QuadtreeNode.cpp" />
     <ClCompile Include="App\Components\src\Pickup.cpp" />
+    <ClCompile Include="App\Components\src\Ammo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -115,6 +116,7 @@
     <ClInclude Include="App\Utilities\include\QuadtreeNode.h" />
     <ClInclude Include="App\Utilities\include\Profiler.h" />
     <ClInclude Include="App\Components\include\Pickup.h" />
+    <ClInclude Include="App\Components\include\Ammo.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="NextAPI">
